# educational-game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
src/Assets/: RacingCar.gpmesh  Rifle.gpmesh  Target.gpmesh  player-controller-map.keymap
src/actors/: Actor.cpp  Actor.hpp  BallActor.cpp  BallActor.hpp  CameraActor.cpp  CameraActor.hpp  FPSActor.cpp  FPSActor.hpp  FollowActor.cpp  FollowActor.hpp  OrbitActor.cpp  OrbitActor.hpp  PlaneActor.cpp  PlaneActor.hpp  SplineActor.cpp  SplineActor.hpp  TargetActor.cpp  TargetActor.hpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp  SoundEvent.cpp  SoundEvent.hpp
src/components/: Component.cpp  Component.hpp
src/components/camera/: CameraComponent.cpp  CameraComponent.hpp  FPSCamera.cpp  FPSCamera.hpp  FollowCamera.cpp  FollowCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp  SplineCamera.cpp  SplineCamera.hpp
src/components/collision/: BallMove.cpp  BallMove.hpp  BoxComponent.cpp  BoxComponent.hpp  CircleComponent.cpp  CircleComponent.hpp
src/components/control/: AudioComponent.cpp  AudioComponent.hpp  InputComponent.cpp  InputComponent.hpp  MoveComponent.cpp  MoveComponent.hpp
src/components/gameplay/: TargetComponent.cpp  TargetComponent.hpp
src/components/render/: MeshComponent.cpp  MeshComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
src/core/: InputSystem.cpp  InputSystem.hpp  PhysWorld.cpp  PhysWorld.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/helper/: Collision.cpp  Collision.hpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  Random.cpp  Random.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/shaders/: Basic.frag  Basic.vert  BasicMesh.vert  Phong.frag  Phong.vert  Sprite.frag  Sprite.vert  Transform.vert
src/ui/: DialogBox.cpp  DialogBox.hpp  Font.cpp  Font.hpp  HUD.cpp  HUD.hpp  PauseMenu.cpp  PauseMenu.hpp  UIScreen.cpp  UIScreen.hpp
